--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
       - ./scripts/init_db.sql:/docker-entrypoint-initdb.d/01-init.sql:ro
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-netra} && psql -U ${POSTGRES_USER:-netra} -d ${POSTGRES_DB:-netra_dev} -c 'SELECT 1' > /dev/null 2>&1"]
-      interval: 10s
+      interval: 30s
       timeout: 5s
       retries: 5
       start_period: 30s
@@ -38,25 +38,39 @@ services:
     networks:
       - netra-network
     restart: no  # Changed from unless-stopped to prevent unwanted auto-restarts
+    deploy:
+      resources:
+        limits:
+          memory: 512M
+          cpus: '0.5'
+        reservations:
+          memory: 256M
 
   # Dev Redis Cache
   dev-redis:
     image: redis:7-alpine
     container_name: netra-dev-redis
     profiles: ["dev"]
-    command: redis-server --appendonly yes
+    command: redis-server --appendonly yes --maxmemory 256mb --maxmemory-policy allkeys-lru
     ports:
       - "${DEV_REDIS_PORT:-6380}:6379"
     volumes:
       - dev_redis_data:/data
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
-      interval: 10s
+      interval: 30s
       timeout: 5s
       retries: 5
     networks:
       - netra-network
     restart: no  # Changed from unless-stopped to prevent unwanted auto-restarts
+    deploy:
+      resources:
+        limits:
+          memory: 256M
+          cpus: '0.25'
+        reservations:
+          memory: 128M
 
   # Dev ClickHouse Analytics
   dev-clickhouse:
@@ -76,12 +90,19 @@ services:
       - ./scripts/init_clickhouse.sql:/docker-entrypoint-initdb.d/01-init.sql:ro
     healthcheck:
       test: ["CMD", "wget", "--spider", "-q", "http://127.0.0.1:8123/ping"]
-      interval: 10s
+      interval: 30s
       timeout: 5s
       retries: 5
     networks:
       - netra-network
     restart: no  # Changed from unless-stopped to prevent unwanted auto-restarts
+    deploy:
+      resources:
+        limits:
+          memory: 1G
+          cpus: '0.5'
+        reservations:
+          memory: 512M
 
   # Dev Auth Service (starts first among Netra services)
   dev-auth:
@@ -132,13 +153,20 @@ services:
         condition: service_healthy
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
-      interval: 30s
+      interval: 60s
       timeout: 10s
       retries: 3
       start_period: 40s
     networks:
       - netra-network
     restart: no  # Changed from unless-stopped to prevent unwanted auto-restarts
+    deploy:
+      resources:
+        limits:
+          memory: 512M
+          cpus: '0.5'
+        reservations:
+          memory: 256M
     command: >
       sh -c "
         echo 'Starting auth service...' &&
@@ -197,13 +225,20 @@ services:
         condition: service_healthy
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8090/health"]
-      interval: 30s
+      interval: 60s
       timeout: 10s
       retries: 3
       start_period: 40s
     networks:
       - netra-network
     restart: no  # Changed from unless-stopped to prevent unwanted auto-restarts
+    deploy:
+      resources:
+        limits:
+          memory: 512M
+          cpus: '0.5'
+        reservations:
+          memory: 256M
     command: >
       sh -c "
         echo 'Starting analytics service...' &&
@@ -280,13 +315,20 @@ services:
         condition: service_healthy
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
-      interval: 30s
+      interval: 60s
       timeout: 10s
       retries: 3
       start_period: 40s
     networks:
       - netra-network
     restart: no  # Changed from unless-stopped to prevent unwanted auto-restarts
+    deploy:
+      resources:
+        limits:
+          memory: 1G
+          cpus: '1.0'
+        reservations:
+          memory: 512M
     command: >
       sh -c "
         echo 'Waiting for database...' &&
@@ -358,6 +400,13 @@ services:
     networks:
       - netra-network
     restart: no  # Changed from unless-stopped to prevent unwanted auto-restarts
+    deploy:
+      resources:
+        limits:
+          memory: 1G
+          cpus: '1.0'
+        reservations:
+          memory: 512M
     command: npm run dev
 
   # ============================================
