fix(frontend): use backend API URL for agent endpoints
- Updated useMessageSending hook to use proper backend API URL
- Fixed issue where agent endpoints were being called on frontend domain
- Import getUnifiedApiConfig to get correct API URL configuration
- Ensures /api/agents/* requests go to api.staging.netrasystems.ai not app.staging.netrasystems.ai

Fixes #triage-404

--- a/config/staging.env
+++ b/config/staging.env
@@ -62,6 +62,7 @@ STARTUP_CHECK_TIMEOUT=30
 API_BASE_URL=https://api.staging.netrasystems.ai
 WS_BASE_URL=wss://api.staging.netrasystems.ai/ws
 FRONTEND_URL=https://app.staging.netrasystems.ai
+MCP_BASE_URL=https://api.staging.netrasystems.ai
 
 # CORS Configuration
 CORS_ALLOWED_ORIGINS=https://app.staging.netrasystems.ai,https://api.staging.netrasystems.ai
