--- a/docker-compose.dev-minimal.yml
+++ b/docker-compose.dev-minimal.yml
@@ -46,26 +46,26 @@ services:
         reservations:
           memory: 128M
 
-  # Reduce Backend resources significantly
+  # Increased Backend resources for stability
   dev-backend:
     deploy:
       resources:
         limits:
-          memory: 512M
-          cpus: '0.5'
+          memory: 3G
+          cpus: '1.5'
         reservations:
-          memory: 256M
+          memory: 1G
 
-  # Reduce Frontend resources significantly
+  # Increased Frontend resources for development
   dev-frontend:
     deploy:
       resources:
         limits:
-          memory: 512M
-          cpus: '0.5'
+          memory: 3G
+          cpus: '1.5'
         reservations:
-          memory: 256M
+          memory: 1G
 
 # Total Resources with this override:
-# Memory: ~2.2GB (down from 4.25GB)
-# CPU: ~1.625 cores (down from 3.75 cores)
+# Memory: ~7.9GB (backend+frontend: 6GB, others: 1.9GB)
+# CPU: ~3.625 cores (backend+frontend: 3 cores, others: 0.625 cores)
