--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 # Netra Docker Compose Configuration - Optimized for Stability
 # Following SPEC/docker_volume_optimization.xml
-# 
+#
 # CRITICAL: Maximum 10 named volumes to prevent Docker Desktop crashes
 # Code is baked into images - no code volumes needed
 #
 # Use profiles to run dev or test environments independently:
-# - docker-compose --profile dev up     # Start development environment  
+# - docker-compose --profile dev up     # Start development environment
 # - docker-compose --profile test up    # Start test environment
 # - docker-compose down                 # Stop all services
 
@@ -15,7 +15,7 @@ services:
   # ============================================
   # DEVELOPMENT ENVIRONMENT
   # ============================================
-  
+
   # Dev PostgreSQL Database
   dev-postgres:
     image: postgres:15-alpine
@@ -25,7 +25,7 @@ services:
       POSTGRES_USER: ${POSTGRES_USER:-netra}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-netra123}
       POSTGRES_DB: ${POSTGRES_DB:-netra_dev}
-      POSTGRES_HOST_AUTH_METHOD: trust
+      # Removed POSTGRES_HOST_AUTH_METHOD: trust for better security practice
       POSTGRES_INITDB_ARGS: "--data-checksums"
     ports:
       - "${DEV_POSTGRES_PORT:-5433}:5432"
@@ -34,7 +34,8 @@ services:
       - postgres_data:/var/lib/postgresql/data
       - ./scripts/init_db.sql:/docker-entrypoint-initdb.d/01-init.sql:ro
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-netra}"]
+      # Escaped variable ($$) to ensure the container's shell evaluates it
+      test: ["CMD-SHELL", "pg_isready -U $$POSTGRES_USER"]
       interval: 30s
       timeout: 5s
       retries: 5
@@ -90,7 +91,8 @@ services:
       # Data persistence only (optional for dev)
       - clickhouse_data:/var/lib/clickhouse
     healthcheck:
-      test: ["CMD", "wget", "--spider", "-q", "http://localhost:8123/ping"]
+      # Using clickhouse-client for a more reliable health check than wget
+      test: ["CMD", "clickhouse-client", "--query", "SELECT 1"]
       interval: 30s
       timeout: 5s
       retries: 5
@@ -115,22 +117,22 @@ services:
     environment:
       ENVIRONMENT: development
       LOG_LEVEL: DEBUG
-      
+
       # Database
       POSTGRES_HOST: dev-postgres
       POSTGRES_PORT: 5432
       POSTGRES_USER: ${POSTGRES_USER:-netra}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-netra123}
       POSTGRES_DB: ${POSTGRES_DB:-netra_dev}
-      
+
       # Redis
       REDIS_HOST: dev-redis
       REDIS_PORT: 6379
-      
+
       # Server Config
       PORT: 8081
       HOST: 0.0.0.0
-      
+
       # Auth Config
       JWT_SECRET_KEY: ${JWT_SECRET_KEY:-dev-jwt-secret-key-must-be-at-least-32-characters}
       JWT_ALGORITHM: HS256
@@ -138,8 +140,8 @@ services:
     ports:
       - "${DEV_AUTH_PORT:-8081}:8081"
     volumes:
-      # Optional: single data volume for persistent storage if needed
-      - backend_data:/app/data
+      # FIX: Dedicated volume for auth service data (was previously sharing backend_data)
+      - auth_data:/app/data
     depends_on:
       dev-postgres:
         condition: service_healthy
@@ -172,32 +174,33 @@ services:
     environment:
       ENVIRONMENT: development
       LOG_LEVEL: DEBUG
-      
+
       # Database
       POSTGRES_HOST: dev-postgres
       POSTGRES_PORT: 5432
       POSTGRES_USER: ${POSTGRES_USER:-netra}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-netra123}
       POSTGRES_DB: ${POSTGRES_DB:-netra_dev}
-      
+
       # Redis
       REDIS_HOST: dev-redis
       REDIS_PORT: 6379
-      
+
       # ClickHouse
       CLICKHOUSE_HOST: dev-clickhouse
-      CLICKHOUSE_PORT: 8123
+      # FIX: Use the TCP port (9000) for standard ClickHouse connections, not the HTTP port (8123)
+      CLICKHOUSE_PORT: 9000
       CLICKHOUSE_USER: ${CLICKHOUSE_USER:-netra}
       CLICKHOUSE_PASSWORD: ${CLICKHOUSE_PASSWORD:-netra123}
       CLICKHOUSE_DB: ${CLICKHOUSE_DB:-netra_analytics}
-      
+
       # Auth Service
       AUTH_SERVICE_URL: http://dev-auth:8081
-      
+
       # Server Config
       PORT: 8000
       HOST: 0.0.0.0
-      
+
       # Secrets
       JWT_SECRET_KEY: ${JWT_SECRET_KEY:-dev-jwt-secret-key-must-be-at-least-32-characters}
       SERVICE_SECRET: ${SERVICE_SECRET:-dev-service-secret-for-cross-service-auth}
@@ -214,6 +217,9 @@ services:
       dev-redis:
         condition: service_healthy
       dev-auth:
+        condition: service_healthy
+      # FIX: Added missing dependency on ClickHouse
+      dev-clickhouse:
         condition: service_healthy
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
@@ -246,12 +252,7 @@ services:
     environment:
       NODE_ENV: development
       PORT: 3000
-      
-      # API URLs
-      NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL:-http://localhost:8000}
-      NEXT_PUBLIC_AUTH_URL: ${NEXT_PUBLIC_AUTH_URL:-http://localhost:8081}
-      NEXT_PUBLIC_WS_URL: ${NEXT_PUBLIC_WS_URL:-ws://localhost:8000}
-      NEXT_PUBLIC_ENVIRONMENT: development
+      # NEXT_PUBLIC_* variables are embedded at build time (via args), removed from runtime environment.
     ports:
       - "${DEV_FRONTEND_PORT:-3000}:3000"
     depends_on:
@@ -277,7 +278,7 @@ services:
   # ============================================
   # TEST ENVIRONMENT
   # ============================================
-  
+
   # Test PostgreSQL Database
   test-postgres:
     image: postgres:15-alpine
@@ -287,7 +288,7 @@ services:
       POSTGRES_USER: test
       POSTGRES_PASSWORD: test
       POSTGRES_DB: netra_test
-      POSTGRES_HOST_AUTH_METHOD: trust
+      # Removed POSTGRES_HOST_AUTH_METHOD: trust
     ports:
       - "${TEST_POSTGRES_PORT:-5434}:5432"
     # Test environment - ephemeral data is acceptable
@@ -343,7 +344,8 @@ services:
       - "${TEST_CLICKHOUSE_HTTP_PORT:-8125}:8123"
     # Test environment - ephemeral data is acceptable
     healthcheck:
-      test: ["CMD", "wget", "--spider", "-q", "http://localhost:8123/ping"]
+      # Using clickhouse-client for a more reliable health check
+      test: ["CMD", "clickhouse-client", "--query", "SELECT 1"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -357,22 +359,26 @@ services:
           cpus: '0.2'
 
 # ============================================
-# VOLUMES - MAXIMUM 10 (Currently 4)
+# VOLUMES - MAXIMUM 10 (Currently 5)
 # ============================================
 volumes:
   # Infrastructure data only (required for persistence)
   postgres_data:
     name: netra-postgres-data
-  
+
   redis_data:
     name: netra-redis-data
-  
+
   clickhouse_data:
     name: netra-clickhouse-data
-  
+
   # Application data (for file uploads, caches, etc.)
   backend_data:
     name: netra-backend-data
+
+  # FIX: Added dedicated volume for auth service
+  auth_data:
+    name: netra-auth-data
 
 # ============================================
 # NETWORKS
@@ -383,8 +389,8 @@ networks:
     name: netra-network
 
 # ============================================
-# TOTAL RESOURCE LIMITS:
-# - Memory: ~2.2GB (well within Docker Desktop limits)
+# TOTAL RESOURCE LIMITS (Approx for Dev profile):
+# - Memory: ~2.2GB
 # - CPUs: ~1.875 cores
-# - Volumes: 4 (vs previous 33)
+# - Volumes: 5 (vs previous 33 mentioned in comments)
 # ============================================
