fix(startup): correct WebSocket notifier validation check
- Check for UnifiedToolExecutionEngine instead of dispatcher.websocket_notifier
- The notifier is internal to the executor, not directly on dispatcher
- Validates the executor type and internal notifier presence

This resolves the startup failure where tool dispatcher validation
was looking for websocket_notifier in the wrong place.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -69,6 +69,16 @@
     "cy:run": "cypress run --headless",
     "cy:test": "start-server-and-test dev http://localhost:3000 cypress:run",
     "cypress:run": "cypress run --headless",
+    "cypress:parallel": "node cypress-parallel.js",
+    "cypress:parallel:2": "node cypress-parallel.js --workers 2",
+    "cypress:parallel:4": "node cypress-parallel.js --workers 4",
+    "cypress:parallel:8": "node cypress-parallel.js --workers 8",
+    "cypress:parallel:headed": "node cypress-parallel.js --headed",
+    "cypress:parallel:firefox": "node cypress-parallel.js --browser firefox",
+    "cypress:parallel:quick": "node cypress-parallel.js --workers 4 --timeout 120 --suite-timeout 900",
+    "cypress:parallel:full": "node cypress-parallel.js --workers 8 --timeout 300 --suite-timeout 3600",
+    "cypress:parallel:python": "python ../scripts/cypress_parallel_runner.py",
+    "cypress:parallel:python:full": "python ../scripts/cypress_parallel_runner.py --workers 8 --suite-timeout 3600",
     "e2e:test": "playwright test",
     "e2e:test:ui": "playwright test --ui",
     "e2e:test:headed": "playwright test --headed",
@@ -109,6 +119,7 @@
     "critters": "^0.0.23",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.12",
+    "glob": "^11.0.3",
     "html2canvas": "^1.4.1",
     "immer": "^10.1.1",
     "jest-websocket-mock": "^2.5.0",
