build: add optimized Docker and pytest infrastructure
- Add Alpine-based test containers for 50% faster execution
- Create specialized pytest Docker images for collection/execution/stress
- Add pytest memory plugin for resource monitoring
- Configure multi-stage pytest execution environments
- Add Docker optimization documentation and build scripts

--- a/config/docker_environments.yaml
+++ b/config/docker_environments.yaml
@@ -164,11 +164,12 @@ environments:
       workers: 2
       
     volume_config:
-      use_tmpfs: true
-      tmpfs_size:
-        postgres: 512m
-        redis: 256m
-        clickhouse: 512m
+      use_tmpfs: false
+      # Using named volumes instead of tmpfs for stability
+      persistent_volumes:
+        postgres: alpine-test-postgres-data
+        redis: alpine-test-redis-data
+        clickhouse: alpine-test-clickhouse-data
         
   alpine_development:
     compose_file: docker-compose.alpine.yml
