--- a/pytest.ini
+++ b/pytest.ini
@@ -1,13 +1,13 @@
 [pytest]
-# Pytest configuration for Netra Core
-testpaths = tests netra_backend/tests auth_service/tests
+# Pytest configuration for Netra Core - CRITICAL DOCKER OPTIMIZATION
+testpaths = tests
 python_files = test_*.py *_test.py
 python_classes = Test*
 python_functions = test_*
-addopts = -ra --strict-markers --strict-config --timeout=120 --tb=short
+addopts = -ra --strict-markers --strict-config --timeout=120 --tb=short --maxfail=10 --disable-warnings
 minversion = 6.0
 asyncio_mode = auto
-asyncio_default_fixture_loop_scope = session
+asyncio_default_fixture_loop_scope = function
 markers =
     # Environment markers
     env: Environment-specific tests
