feat(docker): add staging Google OAuth env vars to docker-compose
- Add GOOGLE_OAUTH_CLIENT_ID_STAGING environment variable
- Add GOOGLE_OAUTH_CLIENT_SECRET_STAGING environment variable
- Enables OAuth configuration for staging environment

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -149,6 +149,8 @@ services:
       # Google OAuth Configuration
       GOOGLE_OAUTH_CLIENT_ID_DEVELOPMENT: ${GOOGLE_OAUTH_CLIENT_ID_DEVELOPMENT}
       GOOGLE_OAUTH_CLIENT_SECRET_DEVELOPMENT: ${GOOGLE_OAUTH_CLIENT_SECRET_DEVELOPMENT}
+      GOOGLE_OAUTH_CLIENT_ID_STAGING: ${GOOGLE_OAUTH_CLIENT_ID_STAGING}
+      GOOGLE_OAUTH_CLIENT_SECRET_STAGING: ${GOOGLE_OAUTH_CLIENT_SECRET_STAGING}
       
       # E2E Test Configuration
       E2E_OAUTH_SIMULATION_KEY: ${E2E_OAUTH_SIMULATION_KEY}
