--- a/requirements.txt
+++ b/requirements.txt
@@ -115,12 +115,15 @@ Faker>=37.6.0
 psutil>=7.0.0
 
 # --- Distributed Tracing & Observability ---
-# OpenTelemetry API for distributed tracing
-# OpenTelemetry deps temporarily disabled due to conflicts
-# opentelemetry-api>=1.28.0
-# opentelemetry-sdk>=1.28.0
-# opentelemetry-instrumentation-fastapi>=0.49b0
-# opentelemetry-exporter-otlp>=1.28.0
+# OpenTelemetry for distributed tracing with OTLP export
+opentelemetry-api==1.24.0
+opentelemetry-sdk==1.24.0
+opentelemetry-instrumentation-fastapi==0.45b0
+opentelemetry-instrumentation-requests==0.45b0
+opentelemetry-instrumentation-sqlalchemy==0.45b0
+opentelemetry-instrumentation-redis==0.45b0
+opentelemetry-exporter-otlp==1.24.0
+opentelemetry-exporter-jaeger==1.21.0
 
 # --- Testing ---
 # The standard testing framework for Python.
