--- a/docker-compose.alpine-test.yml
+++ b/docker-compose.alpine-test.yml
@@ -126,6 +126,7 @@ services:
       REDIS_PORT: 6379
       CLICKHOUSE_HOST: alpine-test-clickhouse
       CLICKHOUSE_PORT: 9000
+      CLICKHOUSE_MOCK_MODE: "true"
       AUTH_SERVICE_URL: http://alpine-test-auth:8081
       TEST_MODE: "true"
       WORKERS: 2
