--- a/config/staging.env
+++ b/config/staging.env
@@ -34,7 +34,7 @@ SERVER_PORT=8080
 LOG_LEVEL=INFO
 
 # Authentication Configuration (staging defaults)
-# These will be overridden by GitHub Actions secrets in actual deployment
+# These will be overridden by secrets in actual deployment
 # CRITICAL: These are proper 32+ character secrets for staging deployment
 SECRET_KEY=MNirOcTwpRfPUhpMHB7n6VOTCD3ggxgWlC8n3ZyZIuE
 JWT_SECRET_STAGING=7SVLKvh7mJNeF6njiRJMoZpUWLya3NfsvJfRHPc0-cYI7Oh80oXOUHuBNuMjUI4ghNTHFH0H7s9vf3S835ET5A
