fix(critical): restore SERVICE_SECRET loading from environment variables
- Added _load_secrets_from_environment() to StagingConfig and ProductionConfig
- Ensures SERVICE_SECRET, JWT_SECRET_KEY, and other critical secrets are loaded
- Secrets are loaded BEFORE database URL (as DB password may come from secrets)
- Added comprehensive regression tests to prevent future incidents
- This fixes complete authentication failure in staging/production

CRITICAL: Deploy immediately to restore authentication functionality

--- a/requirements.txt
+++ b/requirements.txt
@@ -56,6 +56,8 @@ bcrypt>=4.3.0
 cryptography>=45.0.6
 
 # --- HTTP & WebSockets ---
+# Requests is needed for wait_for_db.py script
+requests>=2.32.0
 # Modern async HTTP client, used by FastAPI's TestClient and many SDKs.
 httpx>=0.28.1
 # Another powerful async HTTP client/server library.
