--- a/requirements.txt
+++ b/requirements.txt
@@ -42,6 +42,8 @@ redis>=6.4.0
 # --- Analytics Database ---
 # ClickHouse driver for Python.
 clickhouse-connect>=0.8.18
+# CRITICAL: clickhouse-driver is used by the codebase (different from clickhouse-connect)
+clickhouse-driver>=0.2.9
 # LZ4 is a dependency for ClickHouse for fast compression.
 lz4>=4.4.4
 
