--- a/.github/workflows/config-loop-check.yml
+++ b/.github/workflows/config-loop-check.yml
@@ -23,7 +23,7 @@ on:
 jobs:
   test-configuration:
     name: Test Configuration Management
-    runs-on: ubuntu-latest
+    runs-on: warp-custom-default
     
     steps:
     - uses: actions/checkout@v3
@@ -58,7 +58,7 @@ jobs:
 
   monitor-docker-configuration:
     name: Monitor Docker Configuration
-    runs-on: ubuntu-latest
+    runs-on: warp-custom-default
     if: github.event_name != 'pull_request'  # Only run on direct pushes
     
     services:
@@ -136,7 +136,7 @@ jobs:
 
   staging-configuration-check:
     name: Staging Configuration Check
-    runs-on: ubuntu-latest
+    runs-on: warp-custom-default
     if: github.ref == 'refs/heads/staging'
     environment: staging
     
